fix(consoletheme): hr elements were too wide on narrow viewports

--- a/src/PublicApp/styles/console/base.scss
+++ b/src/PublicApp/styles/console/base.scss
@@ -27,6 +27,8 @@ html *{
 %box{
 	@extend %normalTheme;
 }
+
+//--borders
 %charLeftBorder{
 	padding-left: 2em;
 	position: relative;
@@ -40,6 +42,17 @@ html *{
 		top: 0;
 		white-space: normal;
 		width: 0.8em;
+	}
+}
+%charBottomBorder{
+	overflow: hidden;
+	padding-bottom: 1.2em;
+	position: relative;
+	&:after{
+		bottom: 0;
+		left: 0;
+		position: absolute;
+		white-space: pre;
 	}
 }
 
@@ -80,17 +93,9 @@ dialog{
 	@extend %box;
 }
 h1, h2{
+	@extend %charBottomBorder;
 	min-width: 4.8em;
-	overflow: hidden;
-	padding-bottom: 1.2em;
-	position: relative;
 	width: fit-content;
-	&:after{
-		bottom: 0;
-		left: 0;
-		position: absolute;
-		white-space: pre;
-	}
 }
 h1{
 	&:after{
@@ -119,10 +124,10 @@ h6:before{
 	content: '###### ';
 }
 hr{
+	@extend %charBottomBorder;
 	margin-bottom: 1.2rem;
 	&:after{
 		content: repeat('-', 120);
-		display: block;
 	}
 }
 img, svg, video{
